para_se_basear/Trab_Anna/SyntaticAnalyzer/Tests/Error/16.AMZ
void main() {
	object a = {int b[2] : 1 , string c : 0.3};
	object c = {int a: 1 , string b : "b"};
}
